syntax = "proto3";

option go_package = "go.skia.org/infra/bisection/go/proto";

service CulpritDetection {
  // GetFunctionalDifference determines whether two changes are functionally different.
  //
  // Functional bisections are used to find culprits for test failures or flakes.
  // Thus, a functional difference indicates that a failure / flake based regression.
  // See https://chromium.googlesource.com/chromium/src/+/HEAD/docs/speed/bisects.md
  // for more details.
  rpc GetFunctionalDifference(GetFunctionalDifferenceRequest)
      returns (GetFunctionalDifferenceResponse) {}

  // GetPerformanceDifference determines whether two changes are performantly different.
  //
  // Performance differences are used to find culprits for performance metrics.
  // Thus, a performance difference indicates some performance regression.
  // See https://chromium.googlesource.com/chromium/src/+/HEAD/docs/speed/bisects.md
  // for more details.
  rpc GetPerformanceDifference(GetPerformanceDifferenceRequest)
      returns (GetPerformanceDifferenceResponse) {}
}

enum State {
  // The state is unknown when the calculated p-value is in between the low and high
  // thresholds. This usually indicates that more samples are required.
  UNKNOWN = 0;

  // The state is different when the calculated p-value is lower than or equal to the
  // low threshold. This indicates that the samples are unlikely to come from the same
  // distribution and are therefore liklely different.
  DIFFERENT = 1;

  // The state is the same when the calculated p-value is greater than the high
  // threshold. This indicates that the samples are unlikely to come from distributions
  // that differ by the given comparison magnitude.
  SAME = 2;
}

message GetFunctionalDifferenceRequest {
  repeated bool samples_a = 1;

  repeated bool samples_b = 2;

  // The estimated size of the regression to search for. Smaller magnitudes generally
  // require more samples.
  //
  // The comparsion magnitude is used to calculate the upper (high) threshold.
  // Comparison magnitude defaults to 0.5 if undefined.
  //
  // For functional differences, the comparison magnitude refers to the failure rate, and
  // is expected to be of a value between 0.0 and 1.0.
  float comparison_magnitude = 3;

  // If the calculated p-value is greater than this high threshold, the two samples are
  // determined to come from the same distribution.
  //
  // Setting this will override the high threshold that's usually calculated using the
  // comparison magnitude.
  float high_threshold = 4;

  // The traditional significance threshold. If the calculated p-value is lower than this
  // lower threshold, the two samples are determined to come from different
  // distributions. This defaults to a value of 0.01.
  float low_threshold = 5;
}

message GetFunctionalDifferenceResponse {
  State state = 1;

  // The calculated p-value used to determine the state.
  float p_value = 2;

  // The low threshold used as part of the calculation.
  float low_threshold = 3;

  // The high threshold used as part of the calculation.
  float high_threshold = 4;
}

message GetPerformanceDifferenceRequest {
  // Values for performance differences are floats, which usually refer to the
  // histogram sample values.
  repeated float samples_a = 1;

  repeated float samples_b = 2;

  // The estimated size of the regression to search for. Smaller magnitudes generally
  // require more samples.
  //
  // The comparsion magnitude is used to calculate the upper (high) threshold.
  // Comparison magnitude defaults to 1.0 if undefined.
  //
  // For x differences, the comparison magnitude refers to x, and
  // is expected to be of a value between 0.0 and 4.0.
  float comparison_magnitude = 3;

  // If the calculated p-value is greater than this high threshold, the two samples are
  // determined to come from the same distribution.
  //
  // Setting this will override the high threshold that's usually calculated using the
  // comparison magnitude.
  float high_threshold = 4;

  // The traditional significance threshold. If the calculated p-value is lower than this
  // lower threshold, the two samples are determined to come from different
  // distributions. This defaults to a value of 0.01.
  float low_threshold = 5;
}

message GetPerformanceDifferenceResponse {
  State state = 1;

  // The calculated p-value used to determine the state.
  float p_value = 2;

  // The low threshold used as part of the calculation.
  float low_threshold = 3;

  // The high threshold used as part of the calculation.
  float high_threshold = 4;
}
